[tool.poetry]
name = "pink-form"
version = "0.1.0"
description = "Give you the blue form. A must have to get the 'Laisser-Passer A38'!"
authors = ["Tom Gabrièle <tgabriele@alwaysdata.com>"]
readme = "README.md"
packages = [{include = "pink_form", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
